--- a/store.html
+++ b/store.html
@@ -143,7 +143,10 @@
 
         <!--!Funcionalidad tienda-->
         <!-- ? boton flotante-->
-        <button class="bottom_button">+</button>
+        <button class="bottom_button">
+            <span class="cart-icon">+</span>
+            <span class="cart-counter" id="cartCounter"> 0 </span>
+        </button>
         <!-- capa overlay-->
         <div class="overlay" id="overlay"></div>
         <!--TODO Menu lateral-->
